# ai-coach

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
ai_coach/: __init__.py  ai_client.py  app.py  config.py  dependencies.py  models.py  persistence.py  pii.py  rate_limit.py  review_queue.py  tracing.py
ai_coach/routers/: ai.py  feedback.py  landing.py  system.py
api/: index.py
app/: __init__.py  auth.py  database.py  main.py  matching.py  models.py  parser.py  schemas.py  storage.py
app/templates/: recruiter.html
docs/: evaluation.md
src/ai_coach/: __init__.py  dashboard.py  gap_analysis.py  main.py  models.py  practice.py  recommendations.py  taxonomy.py
src/ai_coach/config/: settings.py
src/ai_coach/data/: skill_taxonomy.json
src/ai_coach/db/: session.py
src/ai_coach/models/: candidate.py
src/ai_coach/services/: events.py  parser.py  storage.py  taxonomy.py  text_extractor.py
src/ai_coach/workers/: profile_worker.py
static/: styles.css
templates/: base.html  candidate.html  feedback.html  landing.html  recruiter.html  review_queue.html
tests/: test_api.py  test_jobs.py  test_matching.py
