[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coach"
version = "0.1.0"
description = "Skill gap analysis and interview practice toolkit"
authors = [{name = "AI Coach"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_coach = ["data/*.json"]
